# NN_rep

./: CMakeLists.txt  MNISTread  MNISTread.cpp  MNISTread.h  README.md  neuralnetw  neuralnetw.cpp  ownNNet.cpp
